
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static void
dummy_putc(int ch, void *arg)
{
    void (*real_putc)(char) = arg;

    real_putc(ch);
}
