; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_printf.c_dummy_putc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_printf.c_dummy_putc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @dummy_putc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dummy_putc(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca void (i8)*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to void (i8)*
  store void (i8)* %7, void (i8)** %5, align 8
  %8 = load void (i8)*, void (i8)** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = trunc i32 %9 to i8
  call void %8(i8 signext %10)
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
